# teachme-certification-service

./: .env.template  .env.test  .gitignore  .pylintrc  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  mongo-init.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
certification_service/: app.py  blob_storage.py  cert_management.py  config.py  course_cert_generator.py  course_cert_utils.py  database.py  health.py  kafka_main.py  kafka_utils.py  logger.py
certification_service/kafka/: consumer.py  events.py  kafka_main.py  kafka_utils.py  producer.py
certification_service/models/: student_course_data.py
certification_service/routes/: certification_routes.py  monitoring_routes.py
certification_service/swagger_docs/: certify_student.yml  delete_all_student_certificates.yml  delete_course_certificate.yml  get_all_certificates.yml  get_course_certificate.yml  update_course_certificate.yml
mongodb/: mongo-init.sh  mongod.conf
mongodb/data/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0--7082845935751901115.wt  collection-2--7082845935751901115.wt  index-1--7082845935751901115.wt  index-3--7082845935751901115.wt  sizeStorer.wt
mongodb/data/diagnostic.data/: metrics.2024-11-26T14-17-28Z-00000  metrics.2024-11-26T14-17-40Z-00000  metrics.2024-11-26T14-24-16Z-00000  metrics.2024-11-26T14-31-58Z-00000  metrics.2024-11-26T14-34-55Z-00000  metrics.2024-11-26T14-44-24Z-00000  metrics.2024-11-26T14-53-13Z-00000  metrics.2024-11-26T18-09-24Z-00000  metrics.2024-11-26T18-13-46Z-00000  metrics.2024-11-26T18-16-20Z-00000  metrics.2024-11-26T18-23-07Z-00000  metrics.2024-11-26T18-37-42Z-00000  metrics.2024-11-26T18-41-28Z-00000  (+4 more)
tests/: kafka_test  test_api.py  test_consumer.py  test_graceful_shutdown.py  test_kafka.py  test_producer.py  test_services.py
tests/integration/: test_database.py
(+103 files in other folders)
